fix: file browser header alignment issues, and don't display download for files over 10 MB as API current does not support it very well.

--- a/src/app/node-info/node-info.component.scss
+++ b/src/app/node-info/node-info.component.scss
@@ -11,6 +11,7 @@
     top: 0;
     position: sticky;
     background-color: white;
+    z-index: 9999;
   }
 
   .summary-box {
